[package]
edition = "2021"
name = "spa-rs"
version = "0.5.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.57"
axum = {version = "0.5.6", features = ["headers", "multipart", "ws"]}
axum-help = {path = './axum-help'}
axum-server = {version = "0.4.4", features = ["tls-rustls"]}
http = "0.2.7"
http-body = "0.4.5"
log = "0.4.17"
parking_lot = "0.12.0"
reqwest = {version = "0.11.10", default-features = false, optional = true}
rust-embed = "6.4.0"
tower = {version = "0.4.12"}
tower-http = {version = "0.3.3", features = ["fs", "set-header"]}

[dev-dependencies]
env_logger = "0.9.0"
tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}

[features]
reverse-proxy = ["reqwest"]
