[package]
edition = "2021"
name = "spa-rs"
version = "0.8.0"
description = "Embed all SPA web application files and release as a single binary executable."
license = "MIT"
homepage = "https://github.com/avalon1610/spa-rs"
repository = "https://github.com/avalon1610/spa-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.57"
axum = { version = "0.7", features = ["multipart", "ws", "macros", "http2"] }
axum-help = { path = './axum-help', version = "0.1.3" }
axum-server = "0.6"
headers = "0.4.0"
log = "0.4.17"
md5 = "0.7.0"
parking_lot = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", default-features = false, optional = true }
rust-embed = "8.0.0"
tower = { version = "0.4.12" }
tower-http = { version = "0.5.0", features = ["fs", "set-header"] }

[dev-dependencies]
env_logger = "0.11.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
reverse-proxy = ["reqwest"]
rustls = ["axum-server/tls-rustls"]
openssl = ["axum-server/tls-openssl"]
