[package]
edition = "2021"
name = "axum-help"
homepage = "https://github.com/avalon1610/spa-rs"
repository = "https://github.com/avalon1610/spa-rs"
version = "0.1.1"
description = "Series enhancements for axum"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6", features = ["headers"]}
http = "0.2.7"
pin-project-lite = "0.2.9"
tower = "0.4.12"
futures-core = "0.3"
